# valheim-world-engine

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  Makefile  README.md  file_analyzer.js  seed.db.analysis.txt  seed.db.gzip_at_10999823.extracted  seed.db.gzip_at_11023858.extracted  seed.db.gzip_at_1126244.extracted  seed.db.gzip_at_2247561.extracted  seed.db.gzip_at_34513956.extracted  seed.db.gzip_at_35477693.extracted  seed.db.gzip_at_40166620.extracted  seed.db.gzip_at_50704966.extracted  seed.db.gzip_at_54403461.extracted  seed.db.gzip_at_58525258.extracted  seed.db.gzip_at_61381298.extracted  seed.db.gzip_at_77268884.extracted  seed.db.gzip_at_90848406.extracted  seed.db.gzip_at_94155521.extracted  seed.db.gzip_at_98793513.extracted  seed.fwl
.claudecode/: base_rules.mdc  python_rules.mdc  (+1 more)
etl/experimental/adaptive-sampling-client/backend/VWE_WorldDataAPI/: README.md  pyproject.toml  requirements.txt
etl/experimental/adaptive-sampling-client/backend/VWE_WorldDataAPI/app/: main.py
etl/experimental/adaptive-sampling-client/backend/VWE_WorldDataAPI/app/api/routes/: vwe_worlddataapi.py  worlds.py
etl/experimental/adaptive-sampling-client/backend/VWE_WorldDataAPI/app/core/: config.py
etl/experimental/adaptive-sampling-client/backend/VWE_WorldDataAPI/app/models/: vwe_worlddataapi_models.py  world_data.py
etl/experimental/adaptive-sampling-client/backend/VWE_WorldDataAPI/app/services/: image_generator.py  vwe_worlddataapi_service.py  world_loader.py
etl/experimental/adaptive-sampling-client/backend/VWE_WorldDataAPI/tests/: test_vwe_worlddataapi.py
(+322 files in other folders)
